<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="qr.a.rooshen.hwkotlinlesson9.qr.a.rooshen.hwkotlinlesson9.AuthorizationFragment">

    <FrameLayout

        android:id="@+id/CL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp">

        <LinearLayout
            android:id="@+id/LLvertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/authorizationTextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:contentDescription="@string/AuthorizationString"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center|start"
                android:lineSpacingExtra="20sp"
                android:paddingStart="16dp"
                android:text="@string/AuthorizationString"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/telefonTextView"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingRight="27dp"
                android:text="@string/TelefonString"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etPersonName"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/_8_800_2222_600"
                android:inputType="textPhonetic|phone"
                android:paddingStart="16dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonBegin"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="240dp"
                android:layout_marginEnd="70dp"
                android:background="@color/colorbegin"
                android:text="@string/BeginButtonString" />

            <TextView
                android:id="@+id/textViewSkip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:gravity="center_horizontal"
                android:text="@string/SkipButtonString"
                android:textColor="@color/colorskip" />

            <TextView
                android:id="@+id/textViewTermsOfUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:breakStrategy="high_quality"
                android:gravity="center_horizontal"
                android:text="@string/TermsOfUseString" />

        </LinearLayout>

    </FrameLayout>
</ScrollView>
